version/0.10/_sources/api/ansys/heart/postprocessor/dpf_utils/index.rst.txt






The ``dpf_utils.py`` module
===========================

.. py:module:: ansys.heart.postprocessor.dpf_utils


Summary
-------












.. py:currentmodule:: dpf_utils
.. tab-set::



    .. tab-item:: Interfaces

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.heart.postprocessor.dpf_utils.ICVoutReader`
            - Read control volume data from binout.



    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.heart.postprocessor.dpf_utils.D3plotReader`
            - Use DPF to parse d3plot.




    .. tab-item:: Exceptions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.heart.postprocessor.dpf_utils.SupportedDPFServerNotFoundError`
            - SupportedDPFServerNotFoundError.









.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_interface"></span> ICVoutReader</api/ansys/heart/postprocessor/dpf_utils/ICVoutReader>


.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_class"></span> D3plotReader</api/ansys/heart/postprocessor/dpf_utils/D3plotReader>



.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-md-lightning_bolt"></span> SupportedDPFServerNotFoundError</api/ansys/heart/postprocessor/dpf_utils/SupportedDPFServerNotFoundError>







Description
-----------

D3plot parser using Ansys-dpf.

..
    !! processed by numpydoc !!







